improved iterface, added icons

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fetch-js": "^1.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-google-maps": "^7.2.0",
     "react-scripts": "1.0.12"
   },
   "scripts": {
